@@ -1,5 +1,11 @@
 2000-01-27  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* FvwmIconMan/xmanager.c (draw_manager):
+	fixed drawing of empty region introduced with 'transparency' patches
+
+	* FvwmIconMan/fvwm.c (ProcessMessage):
+	fixed usage of 'focus' colours when followfocus is false
+
 	* FvwmCommand/FvwmCommandS.c:
 	removed debug fprintf
 
